@@ -2,6 +2,14 @@
 
         Reviewed by Holger Freyther.
 
+        Removed subframe-self-close.html from the Qt skip list.
+
+        * platform/qt/Skipped:
+
+2009-07-07  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by Holger Freyther.
+
         Added all current failing Qt DRT tests to the skip list, for a fresh start.
 
         * platform/qt/Skipped:
